package fr.insa.lyon.ifa1.models.request;

public enum PassagePointType {
    DEPOT, PICKUP, DELIVERY, NONE
}
