package fr.insa.lyon.ifa1.view;

public interface StateMainView {
    public void canvasClick(MainView context);
}
