package fr.insa.lyon.ifa1.view;

public interface ViewInterface {

    void show();

}
